Fix std::span runtime errors with MSVC debug runtime https://bugs.webkit.org/show_bug.cgi?id=283023

Reviewed by Chris Dumez and Alex Christensen.

Microsoft's STL interprets the standard such that operations on two iterators
are only defined for the same sequence. When using the debug runtime this causes
runtime errors around `std::span` doing iterator comparisons. Get the address
of the iterator before doing the operations.

Also fix an assert that failed because it went over the bounds of the
`std::span`.

* Source/WTF/wtf/JSONValues.cpp:
* Source/WTF/wtf/Threading.cpp:
(WTF::Thread::normalizeThreadName):
* Source/WebCore/css/parser/CSSParserToken.cpp:
(WebCore::mergeIfAdjacent):

Canonical link: https://commits.webkit.org/286518@main