Source/WTF/wtf/Threading.cpp
@@ -210,7 +210,6 @@ const char* Thread::normalizeThreadName(const char* threadName)
         result = result.right(kLinuxThreadNameLimit);
 #endif
     auto characters = result.span8();
-    ASSERT(characters[characters.size()] == '\0');
     return byteCast<char>(characters.data());
 #endif
 }
